--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             </div>
         </div>
     </div>
+    <p class="Copyright">Copyright &copy; Oluwafemi <span class="date">2022</span></p>
 </body>
 
 </html>
